MAGETWO-46580: Extract session adapter into separate project
Extracting session adapter

--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,23 @@
 {
-    "name":"colinmollenhour/redis-session",
-    "type":"magento-module",
+    "name":"colinmollenhour/php-redis-session-abstract",
+    "type":"library",
     "license":"BSD-3-Clause",
-    "homepage":"https://github.com/colinmollenhour/Cm_RedisSession",
-    "description":"A Redis-based session handler for Magento with optimistic locking.",
+    "homepage":"https://github.com/colinmollenhour/php-redis-session-abstract",
+    "description":"A Redis-based session handler with optimistic locking.",
     "authors":[
         {
             "name":"Colin Mollenhour"
         }
     ],
     "require":{
-        "magento-hackathon/magento-composer-installer":"*"
+        "php": "~5.5.0|~5.6.0|~7.0.0",
+        "magento/zendframework1": "1.12.16",
+        "colinmollenhour/credis":"1.6"
+
+    },
+    "autoload": {
+        "psr-0": {
+            "Cm\\RedisSession": "lib"
+        }
     }
 }
