--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require":{
         "php": "~5.5.0|~5.6.0|~7.0.0",
         "magento/zendframework1": "~1.12.0",
-        "colinmollenhour/credis":"1.6"
-
+        "colinmollenhour/credis":"~1.6"
     },
     "autoload": {
         "psr-0": {
