--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require":{
-        "php": "^5.5 || ^7.0|| ^7.1 || ^7.2",
+        "php": "^5.5 || ^7.0",
         "colinmollenhour/credis":"~1.6"
     },
     "autoload": {
