Remove support for PHP 5

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require":{
-        "php": "^5.5 || ^7.0 || ^8.0",
+        "php": "^7.4 || ^8.0",
         "colinmollenhour/credis":"~1.6"
     },
     "require-dev": {
