--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         }
     ],
     "require":{
-        "php": "^7.4 || ^8.0",
-        "colinmollenhour/credis":"~1.6"
+        "php": "^7.4 || ^8.0 || ^8.1 || ^8.2",
+        "colinmollenhour/credis":"~1.17"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
