--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require":{
-        "php": "^7.4 || ^8.0 || ^8.1 || ^8.2",
+        "php": "^7.4 || ^8.0",
         "colinmollenhour/credis":"~1.17"
     },
     "require-dev": {
